--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table>
         <tr>
             <td>
-                <img src='aaron_bw.jpg' />
+                <img src='aaron_bw.JPG' />
             </td>
             <td>
                 <h1>Aaron Carter</h1>
